@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<schema name="codec" version="1.2">
+ <types>
+  <fieldType name="string_pulsing" class="solr.StrField" codec="Pulsing"/>
+  <fieldType name="string_simpletext" class="solr.StrField" codec="SimpleText"/>
+  <fieldType name="string_standard" class="solr.StrField" codec="Standard"/>
+    <fieldType name="string" class="solr.StrField" />
+  
+ </types>
+ <fields>
+   <field name="string_pulsing_f" type="string_pulsing" indexed="true" stored="true" />
+   <field name="string_simpletext_f" type="string_simpletext" indexed="true" stored="true" />
+   <field name="string_standard_f" type="string_standard" indexed="true" stored="true" />
+   <field name="string_f" type="string" indexed="true" stored="true" />
+   <dynamicField name="*_simple" type="string_simpletext"  indexed="true" stored="true"/>
+   <dynamicField name="*_pulsing" type="string_pulsing"  indexed="true" stored="true"/>
+   <dynamicField name="*_standard" type="string_standard"  indexed="true" stored="true"/>
+   
+ </fields>
+  <defaultSearchField>string_f</defaultSearchField>
+ <uniqueKey>string_f</uniqueKey>
+</schema>
